Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -32,8 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_employees = ['jim', 'tracy', 'lisa']"
